k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Kompose\kompose-windows-amd64.exe convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: mysql
  name: mysql
spec:
  ports:
    - name: "13306"
      port: 13306
      targetPort: 3306
  selector:
    io.kompose.service: mysql
status:
  loadBalancer: {}
