k8s/ingress.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx

    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
            - name: time-zone
              mountPath: /etc/localtime

      volumes:
        - name: nginx-config
          configMap:
            name: nginx
        - name: time-zone
          hostPath:
            path: /usr/share/zoneinfo/Asia/Seoul

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: 1tb
  labels:
    app.kubernetes.io/managed-by: kargocd
  name: nginx
spec:
  defaultBackend:
    service:
      name: backend
      port:
        number: 8080
